Fix central section alignment

--- a/style.css
+++ b/style.css
@@ -67,9 +67,9 @@ section {
   align-items: center;
 }
 
-/* section div {
+section div {
   flex: 1;
-} */
+}
 
 .button {
   font: var(--links);
